# local-control-mcp

./: .env.example  README.md  deezer_mcp_server.py  lastfm_auth.py  pyproject.toml  requirements.txt  server.py
