[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deezer-mcp-server"
version = "1.0.0"
description = "Serveur MCP pour l'API Deezer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0,<2.0.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
]

[project.scripts]
deezer-mcp-server = "deezer_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]